--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
   "name": "array-to-csv",
   "description": "Convert an array to comma-separated values (CSV) or any delimitor-separated values",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "author": "Jonathan Ong <me@jongleberry.com> (http://jongleberry.com)",
-  "contributors": ["Brian Pow <brianpow@gmail.com>"],
+  "contributors": [
+    "Brian Pow <brianpow@gmail.com>"
+  ],
   "license": "MIT",
-  "repository": { 
-    "type": "git" , 
+  "repository": {
+    "type": "git",
     "url": "https://github.com/jonathanong/array-to-csv.git"
   },
-  "bugs":{
+  "bugs": {
     "url": "https://github.com/jonathanong/array-to-csv/issues"
   },
   "homepage": "https://github.com/jonathanong/array-to-csv",
-  "dependencies": {},
+  "dependencies": {
+    "jslint": "^0.10.3",
+    "object.values": "^1.0.3"
+  },
   "devDependencies": {
     "babel-istanbul": "0",
     "mocha": "2",
